# mscompress

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  index.html  main.js  mkdocs.yml  package.json  preload.js  renderer.js  styles.css  system_worker.js  test.js  worker.js
.github/workflows/: build.yml
cli/: CMakeLists.txt  mscompress.c
cli/test/: requirements.txt  validate.py  validate_test.py
cli/test/lossless_tests/: run_test.sh
cli/test/lossy_log_tests/: run_test.sh
cli/test/test_files/: hek_std2_zlib_subset_missing_spectra.mzML
docs/: index.md
docs/styles/: extra.css
electron/: package.json
electron/app/: main.js  preload.js
electron/assets/icons/: icon.icns
electron/renderer/: index.html  processing.js  renderer.js  styles.css  system_worker.js
modules/python/: CMakeLists.txt  mzml_to_tic.py  mzml_to_tic.spec  preview_gen.py
node/: CMakeLists.txt  export.h  functionWrapper.cpp  objectWrapper.cpp  package.json  processing.cpp  test.js  wrapper.cpp
python/: .coveragerc  .gitignore  MANIFEST.in  pyproject.toml  requirements.txt  setup.py  zlib_wrapper.h
python/bindings/: bindings.pxd  headers.pxi  mscompress.pyx
python/test/: test_mscompress.py
src/: algo.c  arguments.c  compress.c  debug.c  decode.c  decompress.c  encode.c  export.h  extract.c  file.c  mem.c  mscompress.c  mscompress.h  preprocess.c  queue.c  sys.c  wrapper.cpp  zl.c
test/: validate.py
test/delta_tests/: run_test.sh
test/lossless_tests/: run_test.sh
test/lossy_log_tests/: run_test.sh  validate.py
