[build-system]
requires = ["setuptools>=45", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "mscompress"
version = "1.0.1a"
description = "Python bindings for mscompress, a compression library for mass spectrometry data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.c", "*.h", "*.pyi", "py.typed"]
