[build-system]
requires = ["setuptools>=45", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "mscompress"
version = "1.0.1a0"
description = "Python bindings for mscompress, a compression library for mass spectrometry data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "setuptools>=45",
    "cython",
    "numpy",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.c", "*.h", "*.pyi", "py.typed"]
